--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "forceConsistentCasingInFileNames": true,
     "incremental": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "lib": ["dom", "dom.iterable", "esnext"],
     "module": "NodeNext",
     "moduleResolution": "nodenext",
@@ -34,5 +34,11 @@
     "types": ["node", "react-dom", "react", "webpack"]
   },
   "exclude": ["node_modules"],
-  "include": [".next/types/**/*.ts", "**/*.mts", "**/*.ts", "**/*.tsx"]
+  "include": [
+    ".next/dev/types/**/*.ts",
+    ".next/types/**/*.ts",
+    "**/*.mts",
+    "**/*.ts",
+    "**/*.tsx"
+  ]
 }
