--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,5 +34,12 @@
     "types": ["node", "react-dom", "react", "webpack"]
   },
   "exclude": ["node_modules"],
-  "include": ["**/*.mts", "**/*.ts", "**/*.tsx", "src"]
+  "include": [
+    ".next/dev/types/**/*.ts",
+    ".next/types/**/*.ts",
+    "**/*.mts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src"
+  ]
 }
