--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "16.1.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-grid-layout": "^2.2.2",
     "react-string-replace": "^1.1.1",
     "schema-dts": "^1.1.5"
   },
