--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,8 @@
       "@/consts": ["src/app/consts"],
       "@/features": ["src/features"],
       "@/features/*": ["src/features/*"],
+      "@/hooks": ["src/hooks"],
+      "@/hooks/*": ["src/hooks/*"],
       "@/utils": ["src/utils"],
       "@/utils/*": ["src/utils/*"]
     },
