--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/system": "^7.2.0",
     "@next/third-parties": "^16.1.3",
     "@svgr/webpack": "^8.1.0",
+    "@tanstack/react-table": "^8.21.3",
     "ag-grid-react": "^35.0.0",
     "html-entities": "^2.5.5",
     "http-status": "^2.1.0",
